# GoodMorning

./: .gitignore  README.md  pyproject.toml
parser/: parser_weather.py  weather.py
src/: handlers.py  main.py  parser_weather.py
