[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["LebedevSergeyV <ob430y@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
executor = "^23.2"
config = "^0.5.1"
handler = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
